--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,24 @@
 name: echo_52hz
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.2.6 <4.0.0'
+  sdk: ">=3.2.6 <4.0.0"
 
 dependencies:
+  change_app_package_name: ^1.1.0
+  firebase_auth: ^4.17.0
+  firebase_core: ^2.25.0
   flutter:
     sdk: flutter
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
