press back button to show toast message

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   firebase_core: ^2.25.0
   flutter:
     sdk: flutter
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
