--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   change_app_package_name: ^1.1.0
+  cryptography: ^2.7.0
   diacritic: ^0.1.5
   firebase_auth: ^5.1.0
   firebase_core: ^3.1.0
@@ -15,6 +16,7 @@ dependencies:
     sdk: flutter
   fluttertoast: ^8.2.4
   mongo_dart: ^0.10.3
+  pointycastle: ^3.9.1
 
 dev_dependencies:
   flutter_test:
