--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,15 +7,18 @@ environment:
   sdk: ">=3.2.6 <4.0.0"
 
 dependencies:
-  change_app_package_name: ^1.1.0
+  change_app_package_name: ^1.3.0
   diacritic: ^0.1.5
-  firebase_auth: ^5.1.0
-  firebase_core: ^3.1.0
+  firebase_auth: ^5.1.3
+  firebase_core: ^3.3.0
   flutter:
     sdk: flutter
-  fluttertoast: ^8.2.4
+  fluttertoast: ^8.2.6
   mongo_dart: ^0.10.3
+  path: ^1.9.0
+  path_provider: ^2.1.4
   pointycastle: ^3.9.1
+  sqflite: ^2.3.3+1
 
 dev_dependencies:
   flutter_test:
