--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   fluttertoast: ^8.2.6
+  intl: ^0.19.0
   mongo_dart: ^0.10.3
   path: ^1.9.0
   path_provider: ^2.1.4
