--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   change_app_package_name: ^1.3.0
+  device_info_plus: ^10.1.2
   diacritic: ^0.1.5
   firebase_auth: ^5.1.3
   firebase_core: ^3.3.0
