the movie db (1)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,14 @@ dependencies:
   firebase_core: ^3.3.0
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.1.0
+  flutter_secure_storage: ^4.2.1
   intl: ^0.19.0
   mongo_dart: ^0.10.3
   path: ^1.9.0
   path_provider: ^2.1.4
   pointycastle: ^3.9.1
+  shared_preferences: ^2.3.2
   sqflite: ^2.3.3+1
 
 dev_dependencies:
@@ -30,3 +33,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - .env
