--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.1.0
   flutter_secure_storage: ^4.2.1
+  http: ^1.2.2
   intl: ^0.19.0
   mongo_dart: ^0.10.3
   path: ^1.9.0
