--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   pointycastle: ^3.9.1
   shared_preferences: ^2.3.2
   sqflite: ^2.3.3+1
+  webview_flutter: ^4.9.0
 
 dev_dependencies:
   flutter_test:
