--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,35 +4,33 @@ publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: ">=3.2.6 <4.0.0"
+    sdk: ">=3.2.6 <4.0.0"
 
 dependencies:
-  change_app_package_name: ^1.3.0
-  device_info_plus: ^10.1.2
-  diacritic: ^0.1.5
-  firebase_auth: ^5.1.3
-  firebase_core: ^3.3.0
-  flutter:
-    sdk: flutter
-  flutter_dotenv: ^5.1.0
-  flutter_secure_storage: ^4.2.1
-  http: ^1.2.2
-  intl: ^0.19.0
-  mongo_dart: ^0.10.3
-  path: ^1.9.0
-  path_provider: ^2.1.4
-  pointycastle: ^3.9.1
-  shared_preferences: ^2.3.2
-  sqflite: ^2.3.3+1
-  webview_flutter: ^4.9.0
+    change_app_package_name: ^1.4.0
+    device_info_plus: ^10.1.2
+    diacritic: ^0.1.5
+    firebase_auth: ^5.3.0
+    firebase_core: ^3.5.0
+    flutter:
+        sdk: flutter
+    flutter_secure_storage: ^4.2.1
+    http: ^1.2.2
+    intl: ^0.19.0
+    mongo_dart: ^0.10.3
+    path: ^1.9.0
+    path_provider: ^2.1.4
+    pointycastle: ^3.9.1
+    shared_preferences: ^2.3.2
+    sqflite: ^2.3.3
+    webview_flutter: ^4.9.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^4.0.0
+    flutter_test:
+        sdk: flutter
+    flutter_lints: ^4.0.0
 
 flutter:
-  uses-material-design: true
-  assets:
-    - assets/images/
-    - .env
+    uses-material-design: true
+    assets:
+        - assets/images/
