--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     firebase_core: ^3.5.0
     flutter:
         sdk: flutter
+    flutter_bloc: ^8.1.6
     flutter_secure_storage: ^4.2.1
     http: ^1.2.2
     intl: ^0.19.0
