--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
     path: ^1.9.0
     path_provider: ^2.1.4
     pointycastle: ^3.9.1
+    provider: ^6.1.2
     shared_preferences: ^2.3.2
     sqflite: ^2.3.3
     webview_flutter: ^4.9.0
